src/objects/Evernote__Custom_Object_Note__c.object
<CustomObject>
    <fields>
        <fullName>Evernote__CustomObjectName__c</fullName>
        <label>CustomObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evernote__Custom_Object_Id__c</fullName>
        <label>Custom Object Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evernote__NoteId__c</fullName>
        <label>Evernote Note</label>
        <referenceTo>Evernote__Evernote_Note__c</referenceTo>
        <relationshipLabel>Custom Object Notes</relationshipLabel>
        <relationshipName>Custom_Object_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Custom Object Note</label>
    <nameField>
        <label>Custom Object Note Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Object Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>